# pyhtb

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
api/: regen.sh
api/v4/: openapi.v4.yaml
pyhtb/: __init__.py  __init__.pyi
pyhtb/cli/: __init__.py  common.py  config.py  formatter.py  main.py
pyhtb/cli/commands/: __init__.py  auth.py  challenges.py  machines.py  misc.py  vpn.py
pyhtb/experience/v1/: __init__.py
pyhtb/experience/v1/models/: __init__.py  account_response.py  generic_error_response.py  streak_data.py
pyhtb/v4/: __init__.py
pyhtb/v4/api/badges/: get_badges.py
pyhtb/v4/models/: __init__.py  academy_difficulty.py  academy_module.py  academy_tiers.py  active_machine_info.py  active_machine_response.py  assigned_server.py  bad_request_error.py  badge.py  badge_category.py  badges_response.py  base_task.py  blood_info.py  categories_item.py  categories_list_response.py  challenge.py  challenge_activity.py  challenge_activity_info.py  challenge_activity_response.py  challenge_categories.py  challenge_categories_items.py  challenge_change_log_id_response.py  challenge_difficulties.py  challenge_id_response.py  challenge_list.py  challenge_list_response.py  challenge_recommended_response.py  challenge_retires_type_0.py  challenge_suggested_data.py  challenge_suggested_response.py  challenge_writeups.py  company.py  connection.py  connection_data_machine_type_0.py  connection_server.py  connection_status_item.py  connections_server_data.py  connections_server_response.py  connections_servers_prolab_data.py  connections_servers_prolab_response.py  (+256 more)
pyhtb/v5/: __init__.py
pyhtb/v5/models/: __init__.py  connection_assigned_server_type_0.py  connection_base.py  connection_competitive_entry.py  connection_competitive_entry_type.py  connection_lab_entry.py  connection_lab_entry_type.py  connection_machine.py  connection_pro_lab_entry.py  connection_pro_lab_entry_type.py  connection_prolab.py  connections_response.py  feedback_for_chart.py  get_machines_difficulty_item.py  get_machines_free.py  get_machines_os_item.py  get_machines_show_completed.py  get_machines_sort_by.py  get_machines_sort_type.py  get_machines_sp_tier.py  get_machines_state_item.py  get_machines_todo.py  get_user_profile_content_type.py  links.py  machine_creator.py  machine_label.py  machine_play_info.py  machine_retiring_type_0.py  machines_item.py  machines_response.py  meta.py  meta_alt.py  own_error_response.py  own_request.py  own_response.py  own_response_own_type.py  pagination_link.py  rank_update.py  universities_item.py  universities_response.py  (+24 more)
scripts/: generate_init_stub.py
tests/: conftest.py  test_cli.py  test_helpers.py
(+134 files in other folders)
