[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyhtb"
version = "0.1.3"
description = "Unofficial Hack The Box Python SDK"
readme = "README.md"
requires-python = ">=3.9"
license = "Unlicense"
keywords = [
    "hackthebox",
    "htb",
    "cybersecurity",
    "api-client",
    "sdk",
]
dependencies = [
    "httpx>=0.28.1",
    "attrs>=26.1.0",
    "click>=8.0.0",
    "rich>=13.0.0",
]

authors = [
    { name = "Gubarz" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/Gubarz/pyhtb"
Repository = "https://github.com/Gubarz/pyhtb"
Issues = "https://github.com/Gubarz/pyhtb/issues"

[project.scripts]
pyhtb = "pyhtb.cli:main"


[tool.setuptools.packages.find]
where = ["."]
include = ["pyhtb*"]

[tool.setuptools.package-data]
pyhtb = ["py.typed"]
